--- a/dogs/src/app/components/dogs.module.css
+++ b/dogs/src/app/components/dogs.module.css
@@ -9,6 +9,8 @@
     font-size: 30px;
 }
 .box img {
+    /* max-width: 100%;
+    height: auto; */
     border-radius: 10%;
     object-fit: cover;
 }
